# weaver.ai

./: .coverage  .dockerignore  .env.example  .env.security.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_AND_INSTALL_REPORT.md  CI_CD_IMPLEMENTATION.md  CI_FIX_REPORT.md  CLEAN_CODE_SUMMARY.md  CONNECTION_POOLING_RESULTS.md  DEVELOPMENT_PLAN.md  DOCKER_PROOF.md  DOCKER_SECURITY_SCANNING.md  DOCKER_SECURITY_SCAN_RESULTS.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.locust  Dockerfile.perf  Dockerfile.test  FINAL_VERIFICATION_REPORT.md  FULL_FRAMEWORK_TEST_EXPLAINED.md  INJECTION_VULNERABILITY_FIXES.md  LIBRARY_AUDIT_REPORT.md  Makefile  PENTEST_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_REPORT.md  PHASE1_PROOF.md  PHASE1_RESULTPUBLISHER_COMPLETE.md  PHASE3_COMPLETE.md  POWDER_FINDER_PENTEST_SUMMARY.md  README.md  SECURITY_AND_BUILD_COMPLETE.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_TEST_BREAKDOWN.md  (+59 more)
.github/: dependabot.yml
agents/: README.md
docs/: CI_CD_IMPLEMENTATION.md  CLEAN_CODE_SUMMARY.md  DEVELOPMENT_PLAN.md  FRAMEWORK_VALIDATION_SUMMARY.md  PERFORMANCE_BASELINE_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_QUICK_START.md  PHASE1_PROOF.md  PHASE2_MODEL_INTEGRATION_COMPLETE.md  PHASE4_DEVELOPER_GUIDE.md  PHASE5_BASELINE_COMPLETE.md  REAL_LLM_SETUP.md  SIGNED_TELEMETRY_IMPLEMENTATION.md  agents.md  claude.md
examples/: 01_simple_qa.py  02_analysis_pipeline.py  A2A_TESTING_README.md  BUG_FIX_SUMMARY.md  MULTIAGENT_README.md  MULTIAGENT_TEST_GUIDE.md  README.md  a2a_multiagent_test.py  a2a_orchestrator_agent.py  a2a_search_agent.py  a2a_summarizer_agent.py  a2a_test_client.py  a2a_translator_agent.py  performance_demo.py  signed_telemetry_demo.py  simple_agent.py  simple_api_demo.py  test_multiagent_direct.py
fastapi/: __init__.py  testclient.py
jwt/: __init__.py
k8s/: README.md
load_tests/: README.md  analyze_baseline.py  locustfile.py  quick_baseline.py  quick_test.py  requirements.txt  run_baseline.py  run_baseline.sh
manual_tests/: test_real_sailpoint_mcp.py
pydantic/: __init__.py
sailpoint-mcp-server/: README.md  package.json  server.js
scripts/: README.md  docker-security-check.sh  generate_a2a_keys.py  generate_rsa_keys.py
tests/: test_a2a_envelope.py  test_agent_math.py  test_flexible_models.py  test_gateway_smoke.py  test_mcp_server_client.py  test_mcp_tool_integration.py  test_memory_persistence.py  test_models.py  test_security_auth.py  test_security_fixes.py  test_security_guardrails.py  test_security_ratelimit.py  test_security_rbac.py  test_simple_api.py  test_workflow.py
weaver_ai/: __init__.py  a2a.py  a2a_client.py  a2a_router.py  agent.py  config_validator.py  crypto_utils.py  gateway.py  gateway_test.py  main.py  (+11 more)
weaver_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+139 files in other folders)
