[project]
name = "weaver_ai"
version = "0.1.0"
description = "A2A-compliant, secure agent framework with Pydantic Agents and MCP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "opentelemetry-api>=1.26",
  "opentelemetry-sdk>=1.26",
  "pyjwt>=2.9",
  "pydantic-agents>=0.1",
  "pydantic-mcp>=0.1",
  "pyyaml>=6"
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.6", "black>=24", "pre-commit>=3.7", "pip-audit>=2.7", "cyclonedx-bom>=4"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
