[project]
name = "weaver_ai"
version = "0.1.0"
description = "A2A-compliant, secure agent framework with Pydantic Agents and MCP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "opentelemetry-api>=1.26",
  "opentelemetry-sdk>=1.26",
  "pyjwt>=2.9",
  "pyyaml>=6",
  "redis>=5.0",
  "openai>=1.0",
  "anthropic>=0.25",
  "groq>=0.4",
  "python-dotenv>=1.0",
  "mcp>=0.9.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "pytest-timeout>=2.1", "mypy>=1.10", "ruff>=0.6", "black>=24", "pre-commit>=3.7", "pip-audit>=2.7", "cyclonedx-bom>=4", "fakeredis>=2.20", "types-redis>=4.6", "types-PyYAML>=6.0"]
load-test = ["locust>=2.17.0", "pandas>=2.0.0", "matplotlib>=3.7.0", "seaborn>=0.12.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["weaver_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
